将最后一个1分钟线生成的时间再往后移十分钟，以确保每个15:00以后到来的快照包都参与进入最末笔1分钟的计算

--- a/Conf/DataTranscoding4QuoClientApi.ini
+++ b/Conf/DataTranscoding4QuoClientApi.ini
@@ -1,118 +1,29 @@
 [SRV]
-DumpFolder = ./data/									;行情落盘目录[string]
-
-
+DumpFolder = ./xxxxx/				;行情落盘目录[string]
 [DataSource]
-FinancialData = D:\ServiceManager\srvunit\DataTranscoding4QuoClientApi\financialdata\	;财经数据目录[string]
-Weight = D:\ServiceManager\srvunit\DataTranscoding4QuoClientApi\weight\			;权息文件目录[string]
-
-
-[cff_setting]
-ShowCode = 										;监控代码
-ServerIP_0=hqsrv001.iqwin.com.cn							;中金期货地址1[string]
-ServerPort_0=7031									;中金期货端口1[int]
-LoginName_0=qfl										;用户帐号1[string]
-LoginPWD_0=qfl										;用户密码1[string]
-
-ServerIP_1=hqsrv002.iqwin.com.cn							;中金期货地址2[string]
-ServerPort_1=7031									;中金期货端口2[int]
-LoginName_1=qfl										;用户帐号2[string]
-LoginPWD_1=qfl										;用户密码2[string]
-
-
-[cffopt_setting]
-ShowCode = 										;监控代码
-ServerIP_0=hqsrv002.iqwin.com.cn							;中金期权地址1[string]
-ServerPort_0=8822									;中金期权端口1[int]
-LoginName_0=ql										;用户帐号1[string]
-LoginPWD_0=ql										;用户密码1[string]
-
-ServerIP_1=hqsrv001.iqwin.com.cn							;中金期权地址2[string]
-ServerPort_1=8822									;中金期权端口2[int]
-LoginName_1=ql										;用户帐号2[string]
-LoginPWD_1=ql										;用户密码2[string]
-
-
-[cnf_setting]
-ShowCode = 										;监控代码
-ServerIP_0=hqsrv002.iqwin.com.cn							;商品期货地址1[string]
-ServerPort_0=7020									;中金期货端口1[int]
-LoginName_0=ql										;用户帐号1[string]
-LoginPWD_0=ql										;用户密码1[string]
-
-ServerIP_1=hqsrv001.iqwin.com.cn							;商品期货地址2[string]
-ServerPort_1=7020									;商品期货端口2[int]
-LoginName_1=ql										;用户帐号2[string]
-LoginPWD_1=ql										;用户密码2[string]
-
-
-[cnfopt_setting]
-ShowCode = 										;监控代码
-ServerIP_0=hqsrv002.iqwin.com.cn							;商品期权地址1[string]
-ServerPort_0=7025									;商品期权端口1[int]
-LoginName_0=ql										;用户帐号1[string]
-LoginPWD_0=ql										;用户密码1[string]
-
-ServerIP_1=hqsrv001.iqwin.com.cn							;商品期权地址2[string]
-ServerPort_1=7025									;商品期权端口2[int]
-LoginName_1=ql										;用户帐号2[string]
-LoginPWD_1=ql										;用户密码2[string]
-
+FinancialData = xxxxxxxx\financialdata\	;财经数据目录[string]
+Weight = xxxx\ml45\				;权息文件目录[string]
 
 [sh_setting]
-ShowCode = 600000									;监控代码
-ServerIP_0=61.160.249.43								;上海L1地址1[string]
-ServerPort_0=7000									;上海L1端口1[int]
-LoginName_0=ljwl									;用户帐号1[string]
-LoginPWD_0=ljwl										;用户密码1[string]
-
-ServerIP_1=61.174.50.185								;上海L1地址2[string]
-ServerPort_1=7000									;上海L1端口2[int]
-LoginName_1=ljwl									;用户帐号2[string]
-LoginPWD_1=ljwl										;用户密码2[string]
-
-
-[shopt_setting]
-ShowCode = 										;监控代码
-ServerIP_0=hqsrv002.iqwin.com.cn							;上海期权地址1[string]
-ServerPort_0=8811									;上海期权端口1[int]
-LoginName_0=ql										;用户帐号1[string]
-LoginPWD_0=ql										;用户密码1[string]
-
-ServerIP_1=hqsrv001.iqwin.com.cn							;上海期权地址2[string]
-ServerPort_1=8811									;上海期权端口2[int]
-LoginName_1=ql										;用户帐号2[string]
-LoginPWD_1=ql										;用户密码2[string]
-
+ShowCode = 600000				;监控代码
+ServerIP_0=61.160.249.43			;上海L1地址1[string]
+ServerPort_0=7000				;上海L1端口1[int]
+LoginName_0=ljwl				;用户帐号1[string]
+LoginPWD_0=ljwl					;用户密码1[string]
+ServerIP_1=61.174.50.185			;上海L1地址2[string]
+ServerPort_1=7000				;上海L1端口2[int]
+LoginName_1=ljwl				;用户帐号2[string]
+LoginPWD_1=ljwl					;用户密码2[string]
 
 [sz_setting]
-ShowCode = 										;监控代码
-ServerIP_0=61.160.249.43								;深圳L1地址1[string]
-ServerPort_0=7010									;深圳L1端口1[int]
-LoginName_0=ljwl									;用户帐号1[string]
-LoginPWD_0=ljwl										;用户密码1[string]
-
-ServerIP_1=61.174.50.185								;深圳L1地址2[string]
-ServerPort_1=7010									;深圳L1端口2[int]
-LoginName_1=ljwl									;用户帐号2[string]
-LoginPWD_1=ljwl										;用户密码2[string]
-
-
-[szopt_setting]
-ShowCode = 										;监控代码
-ServerIP_0=							;深圳期权地址1[string]
-ServerPort_0=							;深圳期权端口1[int]
-LoginName_0=							;用户帐号1[string]
-LoginPWD_0=							;用户密码1[string]
-
-ServerIP_1=							;深圳期权地址2[string]
-ServerPort_1=							;深圳期权端口2[int]
-LoginName_1=							;用户帐号2[string]
-LoginPWD_1=							;用户密码2[string]
-
-
-
-
-
+ShowCode = 					;监控代码
+ServerIP_0=61.160.249.43			;深圳L1地址1[string]
+ServerPort_0=7010				;深圳L1端口1[int]
+LoginName_0=ljwl				;用户帐号1[string]
+LoginPWD_0=ljwl					;用户密码1[string]
+ServerIP_1=61.174.50.185			;深圳L1地址2[string]
+ServerPort_1=7010				;深圳L1端口2[int]
+LoginName_1=ljwl				;用户帐号2[string]
+LoginPWD_1=ljwl					;用户密码2[string]
 
 
